--- a/src/app/Styles/homesection.css
+++ b/src/app/Styles/homesection.css
@@ -49,7 +49,7 @@
 
   .homet3{
     padding: 0px 20px;
-
+    margin-top: -20px;
     color: #000046;
     font-size: 16px;
     font-weight: 300;
@@ -148,22 +148,21 @@
     }
 
     .homet1 {
-      padding: 0px 10px;
+      padding: 0px 20px;
       color: #4F4FE6;
       font-size: 10px;
       
       letter-spacing: 0px;
     }
     .homet2{
-      font-size: 47px;
+      font-size: 45px;
       line-height:45px;
-      letter-spacing:-2px;
-      padding: 0px 10px;
-
+      letter-spacing:-1px;
+      font-weight: 550;
 
     }
     .home2svg{
-      margin-left: 72px;
+      margin-left: 80px;
       margin-top: -40px;
       width: 250px;
     }
@@ -171,11 +170,13 @@
 
     .homet3 {
       display: none;
+      margin-top: -20px;
+
     }
     
   .homet3mobile{
     display: flex;
-    padding: 0px 70px 0px 10px;
+    padding: 0px 70px 0px 20px;
 
     color: #000046;
     font-size: 16px;
@@ -197,9 +198,9 @@
     
   .homet3mobile{
     display: flex;
-    padding: 0px 50px 0px 10px;
+    padding: 0px 50px 0px 20px;
 
-
+    margin-top: -20px;
   }
 
   }
