--- a/src/app/Styles/aboutme.css
+++ b/src/app/Styles/aboutme.css
@@ -19,7 +19,6 @@
     font-weight: 300;
     line-height: 200%;
     color: #33336B;
-
   }
   .head{
     padding: 0px 20px;
@@ -56,7 +55,6 @@
         margin: -125px 0px 0px  143px;
     
       }
-
   }
   @media (max-width: 770px) {
     .head{
@@ -64,6 +62,7 @@
       line-height: 70px;
       letter-spacing: -3px;
       padding: 0px;
+      padding-right: 10px;
     }
 
     .aboutme{
@@ -77,7 +76,7 @@
       }
       .aboutcontent{
         margin-top: -50px;
-        font-size: 18px;
+        font-size: 22px;
         padding: 0px;
     
       }
