--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -12,7 +12,7 @@
         color: #33336B;
 }
 .servicecard{
-    margin: 0px 0px 20px 20px;
+    /* margin: 0px 0px 20px 20px; */
     width: 340px;
     height:230px;
     display: flex;
@@ -42,10 +42,26 @@
     color: #33336B;
 }
 .myservices{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
+
+@media (max-width: 1300px) {
+  .servicecard{
+    width: 100%;
+  }
+  .myservices{
+    margin-left: 20px;
+  }
+  }
+  
+@media (max-width: 950px) {
+ 
+  .myservices{
+    grid-template-columns: repeat(2, 1fr);
+}
+  }
 
 @media (max-width: 770px) {
   .servicescontent{
@@ -53,15 +69,21 @@
     font-size: 18px;
     font-weight: 300;
     color: #33336B;
-    letter-spacing: 0.2px;
+    line-height: 170%;
 
     margin-top: -20px;
     margin-left: -20px;
   }
   .servicecard{
-    margin: 0px 0px 20px 0px;
-    width: 300px;
-    height:230px;
+    width: 100%;
+  }
+  .myservices{
+    margin-left: 0px;
+  }
+}
+@media (max-width: 615px) {
+  .myservices{
+    grid-template-columns: repeat(1, 1fr);
+}
 }
 
-  }
