--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -45,6 +45,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    margin-left: 20px;
+
 }
 
 @media (max-width: 1300px) {
