--- a/src/app/Styles/navbar.css
+++ b/src/app/Styles/navbar.css
@@ -59,8 +59,9 @@
     border: none;
     cursor: pointer;
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 400;
     transition: transform 0.2s ease;
+    font-family: inherit; 
 
   }
   
