--- a/src/app/Styles/aboutme.css
+++ b/src/app/Styles/aboutme.css
@@ -9,7 +9,7 @@
     /* white-space: nowrap;  */
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
   }
   .aboutcontent{
