--- a/src/app/Styles/footer.css
+++ b/src/app/Styles/footer.css
@@ -151,7 +151,7 @@
     .footcontent{ 
         flex-direction: column;
         align-items:center;
-        justify-items: start;
+        justify-items: flex-start;
         gap: 70px;
 
     }
