--- a/src/app/Styles/homesection.css
+++ b/src/app/Styles/homesection.css
@@ -12,7 +12,7 @@
     /* white-space: nowrap;  */
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     gap: 70px;
     margin-bottom: 50px;
