--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -17,8 +17,8 @@
     height:230px;
     display: flex;
     flex-direction: column;
-    align-items:start;
-    justify-content: start;
+    align-items:flex-start;
+    justify-content: flex-start;
     border: 1px solid #D1D1D1;
     border-radius: 5px;
 }
@@ -66,8 +66,8 @@
   height: 333.04px;
   display: flex;
   flex-direction: column;
-  align-items:start;
-  justify-content: start; 
+  align-items:flex-start;
+  justify-content: flex-start; 
   padding: 12px 17px;
   gap: 73px; 
   border-radius: 5px;
