--- a/src/app/Styles/model3d.css
+++ b/src/app/Styles/model3d.css
@@ -25,3 +25,19 @@
     /* margin-bottom: 100px; */
 
   }
+  .model3dmobile{
+    display: none;
+  }
+  @media (max-width: 850px) {
+    .model3d{
+      display: none;
+    }
+    .model3dmobile{
+      display:flex;
+      height: 300px;
+    }
+
+    .text3d{
+      display: none;
+    }
+  }
