--- a/src/app/Styles/aboutme.css
+++ b/src/app/Styles/aboutme.css
@@ -4,13 +4,28 @@
     padding: 0;
     box-sizing: border-box;
   }
+  .aboutmeouter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .aboutme{
+    width: 1330px;
     padding: 70px 100px;
-    /* white-space: nowrap;  */
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    align-content: center;
+  }
+  .aboutmewidth{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    /* justify-content: center; */
+    /* align-content: center; */
+    max-width: 1330px;
+
   }
   .aboutcontent{
     padding: 0px 20px;
