--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  border: 1px solid #eeeeee;
+  border: 1px solid #dadada;
   border-radius: 10px;
   background: #ffffff;
   position: relative;
