--- a/src/app/Styles/homesection.css
+++ b/src/app/Styles/homesection.css
@@ -4,6 +4,10 @@
     padding: 0;
     box-sizing: border-box;
   }
+  /* ---------------------------GPT------------------------------------ */
+  
+  /* ---------------------------GPT------------------------------------ */
+
   .outerhero{
     display: flex;
     align-items: center;
@@ -162,8 +166,8 @@
     .homet2{
       font-size: 45px;
       line-height:50px;
-      letter-spacing:-1px;
-      font-weight: 550;
+      letter-spacing:-1.5px;
+      /* font-weight: 550; */
 
     }
     .home2svg{
