--- a/src/app/Styles/model3d.css
+++ b/src/app/Styles/model3d.css
@@ -25,7 +25,7 @@
     margin-bottom: 100px;
 
   }
-  .model3dmobile{
+  /* .model3dmobile{
     display: none;
   }
   @media (max-width: 850px) {
@@ -41,4 +41,4 @@
     .text3d{
       display: none;
     }
-  }
+  } */
