--- a/src/app/Styles/homesection.css
+++ b/src/app/Styles/homesection.css
@@ -1,14 +1,10 @@
-/* Reset */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  /* ---------------------------GPT------------------------------------ */
-  
-  /* ---------------------------GPT------------------------------------ */
-
-  .outerhero{
+   .outerhero{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,9 +41,9 @@
   .homet2{
     padding: 0px 20px;
 
-    background: linear-gradient(to right, #000046, #0000d4); /* Gradient definition */
-    -webkit-background-clip: text; /* Clipping background to text */
-    -webkit-text-fill-color: transparent; /* Making text transparent to show the gradient */
+    background: linear-gradient(to right, #000046, #0000d4); 
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
         font-size: 96px;
         text-transform: uppercase;
         font-weight: 500;
@@ -92,7 +88,7 @@
     color: white;
     z-index: 2;
     transition: color 0.7s ease;
-    font-family: inherit; /* Inherits the font from the parent element */
+    font-family: inherit; 
     
   }
   
@@ -101,21 +97,20 @@
     position: absolute;
     inset: 0;
     background: linear-gradient(to right, #0000d4, #000046);
-    opacity: 0; /* Initially hidden */
+    opacity: 0; 
     transition: opacity 0.7s ease;
     border-radius: inherit;
-    z-index: -1; /* Ensure the pseudo-element is behind the text */
+    z-index: -1; 
   }
   
   .homebtnbtn:hover::before {
-    /* cursor: pointer; */
-    opacity: 1; /* Show the background on hover */
+    opacity: 1; 
   }
   
   .homebtnbtn:hover {
     cursor: pointer;
 
-    color: #fff; /* Ensure text color remains visible on hover */
+    color: #fff; 
   }
   @media (max-width: 1220px) {
     .homet2{
@@ -151,7 +146,7 @@
   }
   @media (max-width: 770px) {
     .herosection{
-      margin-top: 50px;
+      /* margin-top: 50px; */
       padding: 50px 10px;
       gap: 50px;
     }
@@ -160,15 +155,12 @@
       padding: 0px 20px;
       color: #4F4FE6;
       font-size: 10px;
-      
       letter-spacing: 0px;
     }
     .homet2{
       font-size: 45px;
       line-height:50px;
       letter-spacing:-1.5px;
-      /* font-weight: 550; */
-
     }
     .home2svg{
       margin-left: 83px;
@@ -216,7 +208,5 @@
   }
 
   }
-  
-  
-  
-  
+
+ 
