--- a/src/app/Styles/model3d.css
+++ b/src/app/Styles/model3d.css
@@ -4,22 +4,8 @@
     padding: 0;
     box-sizing: border-box;
   }
-
-  .text3d{
-    padding: 0px 200px;
-    margin-bottom: -125px;
-    z-index: 1;
-    font-size: 18px;
-    font-weight: 300;
-    color: #33336B;
-    position: relative; 
-  }
-  #ifocus{
-    color: #4f4fe6;
-    font-weight: 600;
-  }
   .model3d{
-    margin-top: -100px;
+    /* margin-top: -100px; */
     z-index: -1;
 
     margin-bottom: 100px;
@@ -27,18 +13,23 @@
   }
   /* .model3dmobile{
     display: none;
-  }
+  } */
   @media (max-width: 850px) {
-    .model3d{
+    /* .model3d{
       display: none;
-    }
-    .model3dmobile{
+    } */
+    /* .model3dmobile{
+      display:flex;
+      height: 400px;
+      width: 100%;
+    } */
+    .model3d{
       display:flex;
       height: 400px;
       width: 100%;
     }
 
-    .text3d{
+    /* .text3d{
       display: none;
-    }
-  } */
+    } */
+  }
