--- a/src/app/Styles/aboutme.css
+++ b/src/app/Styles/aboutme.css
@@ -18,6 +18,15 @@
     justify-content: center;
     align-content: center;
   }
+  .aboutmeOriginal{
+    width: 1330px;
+    padding: 0px 100px 70px 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    align-content: center;
+  }
   .aboutmewidth{
     display: flex;
     flex-direction: column;
