--- a/src/app/Styles/model3d.css
+++ b/src/app/Styles/model3d.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
   .model3d{
-    /* margin-top: -100px; */
+    margin-top: -70px;
     z-index: -1;
 
     margin-bottom: 100px;
