--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -35,6 +35,13 @@
   overflow: hidden;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
   transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 0.5s ease;
+
+/* /////////////////////////////////////////////// */
+  transform: translateY(30px);
+  opacity: 0;
+  transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+/* /////////////////////////////////////////////// */
+
 }
 
 .servicecard::before {
@@ -86,7 +93,12 @@
 .servicecard:hover .servicecard-content {
   transform: translateY(-5px);
 }
-
+/* /////////////////////////////////////////////// */
+.servicecard.show {
+  transform: translateY(0);
+  opacity: 1;
+}
+/* /////////////////////////////////////////////// */
 .servicecard-title {
   font-size: 1.5rem;
   font-weight: bold;
@@ -132,8 +144,9 @@
     color: #01016A;
     margin-left: 20px;
     margin-top: -5px;
-
 }
+
+
 .cardcontent{
     margin-left: 20px;
     margin-right: 20px;
@@ -142,6 +155,9 @@
     font-weight: 300;
     color: #33336B;
 }
+
+  
+
 .myservices{
     /* display: grid;
     grid-template-columns: repeat(3, 1fr); */
@@ -173,7 +189,19 @@
   border-radius: 5px;
   position: relative; 
   overflow: hidden; 
+
+/* /////////////////////////////////////////////// */
+transform: translateY(30px);
+opacity: 0;
+transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+/* /////////////////////////////////////////////// */
 }
+/* /////////////////////////////////////////////// */
+.projectcard.show {
+  transform: translateY(0);
+  opacity: 1;
+}
+/* /////////////////////////////////////////////// */
 
 .projectcard::before {
   content: "";
@@ -192,7 +220,7 @@
 }
 
 .projectcard:hover::before {
-  opacity: 0.5; 
+  opacity: 0.6; 
 }
 .projectcard * {
   position: relative;
@@ -200,11 +228,6 @@
   opacity: 1; 
   transition: opacity 0.3s ease;
 }
-
-/* .projectcard:hover * {
-  opacity: 0; 
-} */
-
 
 .projectcardt1,
 .projectcardt2{
