--- a/src/app/Styles/services.css
+++ b/src/app/Styles/services.css
@@ -34,12 +34,11 @@
   position: relative;
   overflow: hidden;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-  transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 0.5s ease;
 
 /* /////////////////////////////////////////////// */
   transform: translateY(30px);
   opacity: 0;
-  transition: transform 0.6s ease-out, opacity 0.6s ease-out;
+  transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), box-shadow 0.7s ease,transform 0.6s ease-out, opacity 0.6s ease-out;
 /* /////////////////////////////////////////////// */
 
 }
@@ -70,7 +69,7 @@
 }
 
 .servicecard:hover {
-  transform: translateY(-5px) scale(1.02);
+  transform: translateY(-10px) scale(1.02);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
 }
 
