--- a/src/app/Styles/model3d.css
+++ b/src/app/Styles/model3d.css
@@ -12,9 +12,9 @@
 
   }
   .model3dmobile{
-    margin-top: -100px;
-    height: 610px;
-    /* display: none; */
+    /* margin-top: -100px;
+    height: 610px; */
+    display: none;
   }
   @media (max-width: 850px) {
     .model3d{
