--- a/src/app/Styles/footer.css
+++ b/src/app/Styles/footer.css
@@ -8,8 +8,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-      /* padding: 70px 120px; */
-      background: linear-gradient(to bottom, #000055, #0000ae); /* Gradient definition */
+      background: linear-gradient(to bottom, #00008a, #0000ff); 
+      background-color: #0000ff;
       margin-top: 100px;
   }
   .footerouter{
@@ -107,7 +107,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px 10px;
-    background-color: rgba(255, 255, 255, 0.082);
+    background-color: rgba(255, 255, 255, 0.165);
     border-radius: 5px;
     gap: 5px;
     cursor: pointer;
