--- a/src/app/Styles/loadingscreen.css
+++ b/src/app/Styles/loadingscreen.css
@@ -15,9 +15,36 @@
     background-color: #4f4fe6;
     margin-top: -110px;
     color: #ffffff;
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 400;
     letter-spacing: 1.12px;
-    font-family: inherit;
+    font-family: "Poppins";
 }
+.dot {
+    animation: dots 1.5s infinite;
+  }
+  
+  .dot:nth-child(1) {
+    animation-delay: 0s;
+  }
+  
+  .dot:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+  
+  .dot:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  
+  @keyframes dots {
+    0%, 20% {
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
