--- a/src/app/Styles/rive.css
+++ b/src/app/Styles/rive.css
@@ -1,37 +1,47 @@
+.rive2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .rive{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.rive-animation{
+.rive-animation2{
     width: 1000px;
     height:800px;
 }
+.rive-animation{
+    width: 0px;
+    height:0px;
+}
+
 @media (max-width: 1230px) {
-    .rive-animation{
+    .rive-animation2{
         width: 900px;
         height:700px;
     }
 
 }
 @media (max-width: 950px) {
-    .rive-animation{
+    .rive-animation2{
         width: 700px;
         height:500px;
     }
 
 }
 @media (max-width: 750px) {
-    .rive-animation{
-        width: 600px;
+    .rive-animation2{
+        width: 0px;
+        height:0px;
+    }
+    .rive{
         height:400px;
     }
-
-}
-@media (max-width: 530px) {
     .rive-animation{
-        width: 350px;
-        height:300px;
+        width: 600px;
+        height:1000px;
     }
 
 }
