--- a/src/app/Styles/navbar.css
+++ b/src/app/Styles/navbar.css
@@ -13,8 +13,13 @@ Reset
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: 1300px;
     padding: 15px 30px;
     width: 100%;
+}
+.navcomponent{
+  display: flex;
+  justify-content: center;
 }
 .navbarmobile{
   display: none;
@@ -98,6 +103,9 @@ Reset
   .mobileMenu {
 display: none;}
 @media (max-width: 770px) {
+  .navcomponent{
+  display: block;
+}
   .navbarmobile{
     display: flex;
     flex-direction: column;
